Bug 357439 - String representation of Association is unclear.
Summary: String representation of Association is unclear.
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-02 17:19 UTC by Tzvetelin Katchov
Modified: 2016-01-06 01:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.18.1 (KDE Applications 15.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tzvetelin Katchov 2016-01-02 17:19:49 UTC
String representation of Association uses ":" as separator for all part of representation in form "role A class:role A name:Association name:role B class:role B name".

Role A name often is empty and show something like "Person::Composition:Name:name".

Separator around association name can be space and it will be "Person: Composition Name:name".


Reproducible: Always

Steps to Reproduce:
1. Make Association to class with empty name for role A.
2. Open Class properties.
3. Select Associations page.

Actual Results:  
Person::Composition:Name:name

Expected Results:  
Person: Composition Name:name
Comment 1 Tzvetelin Katchov 2016-01-06 01:22:08 UTC
Git commit 7ccb26503386bcd5426429a20941feced7e472b3 by Tzvetelin Katchov.
Committed on 06/01/2016 at 01:19.
Pushed by katchov into branch 'Applications/15.12'.

Make string representation of Association more clear

String representation of Association like "Person::Composition:Name:name"
become "Person: Composition Name:name".

REVIEW:126607
FIXED-IN:2.18.1 (KDE Applications 15.12.1)

Signed-off-by: Tzvetelin Katchov <katchov@gmail.com>

M  +5    -1    umbrello/umlmodel/association.cpp
M  +3    -2    umbrello/umlwidgets/associationwidget.cpp

http://commits.kde.org/umbrello/7ccb26503386bcd5426429a20941feced7e472b3