Make string representation of Association more clear

String representation of Association like "Person::Composition:Name:name"
become "Person: Composition Name:name".

REVIEW:126607
BUG:357439
FIXED-IN:2.18.1 (KDE Applications 15.12.1)

Signed-off-by: Tzvetelin Katchov <katchov@gmail.com>